2014-12-20  Paul Eggert  <eggert@cs.ucla.edu>

	Simplify unexec file mode setting
	* unexaix.c, unexcoff.c, unexelf.c, unexmacosx.c:
	Don't include <sys/stat.h> when no longer needed.
	(unexec): Create file with correct mode in the first place,
	rather than overwriting the mode later and fiddling with the
	global umask in the mean time.  Avoid bogus usage like
	'umask (777)', which should have been 'umask (0777)'.
	(mark_x): Remove. All callers removed.

2014-12-19  Paul Eggert  <eggert@cs.ucla.edu>

	Minor cleanups for Lisp objects and symbols
	* alloc.c (next_vector, set_next_vector):
	* lisp.h (lisp_h_INTEGERP, make_number, XFASTINT, make_natnum):
	(lisp_h_make_number) [USE_LSB_TAG]:
	Use Lisp_Int0 instead of the mystery constant 0.
	* alloc.c (mark_object): Always set and use po; that's simpler.
	(CHECK_LIVE, CHECK_ALLOCATED_AND_LIVE):
	Properly parenthesize definientia.
	* bidi.c (bidi_initialize):
	* buffer.c (init_buffer_once):
	* nsfns.m (syms_of_nsfns):
	* nsmenu.m (syms_of_nsmenu):
	* nsselect.m (syms_of_nsselect):
	Prefer DEFSYM to defining by hand.
	* buffer.c (syms_of_buffer): Omit unneeded staticpros.
	* data.c: Fix too-long line.
	* lisp.h (DECLARE_GDB_SYM): New macro.
	(DEFINE_GDB_SYMBOL_BEGIN): Use it.
	(DEFINE_GDB_SYMBOL_BEGIN, DEFINE_GDB_SYMBOL_END) [!MAIN_PROGRAM]:
	Declare the symbol, so it's visible to everywhere lisp.h is included.
	Move forward decls as far forward as they can go,
	to allow future changes to use them.

2014-12-18  Paul Eggert  <eggert@cs.ucla.edu>

	* gnutls.c: Include gnutls.h.
	This to check syms_of_gnutls's API even when !HAVE_GNUTLS.
	* image.c (svg_load): Fix pointer signedness.

2014-12-18  Martin Rudalics  <rudalics@gmx.at>

	* frame.c (frame_windows_min_size): New argument IGNORE.
	(adjust_frame_size): When called from change_frame_size call
	frame_windows_min_size with IGNORE Qt so we can ignore size
	restrictions.

2014-12-18  Eli Zaretskii  <eliz@gnu.org>
